# ocieguide

./: .env  .gitignore  Cargo.toml  README.md  design.md  design_doc.md  justfile  sqlx-data.json
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  dependency-security-audit.yml  fly.yml  general.yml  tests.yml
configuration/: base.yml
migrations/: 20211018021854_create_events_table.sql  20211018021854_create_ocieitem_events_table.sql
scripts/: init_db.sh
src/: application.rs  configuration.rs  error_handling.rs  events.rs  lib.rs  main.rs  models.rs  routes.rs  telemetry.rs
src/api/: mod.rs  v1.rs
src/graphql/: health.rs  mod.rs  model.rs  ocieguide.rs  ocieguide_model.rs  ocieguide_schema.rs  schema.rs  starwars_model.rs  starwars_schema.rs
src/junk/: ocieguide_model.rs
src/persistence/: mod.rs  model.rs  repository.rs  seed.rs
src/routes/: api.rs  app_health.rs  graphql.rs  health_check.rs  home.html  home.rs  item.rs  mod.rs  sw_graphql.rs
src/swgraphql/: mod.rs  starwars_model.rs  starwars_schema.rs
tests/api/: api_v1.rs  app_health.rs  health_check.rs  helpers.rs  main.rs  v1.rs
website/: .env  Cargo.toml  Dockerfile  fly.toml  flylogs.sh
website/configuration/: base.yml
website/src/: application.rs  configuration.rs  domain.rs  error.rs  lib.rs  main.rs
website/src/configuration/: settings.rs
website/src/domain/: events.rs  ocie_equipment.rs  user.rs
website/src/error/: response_error.rs
website/src/routes/: health_check.rs
website/tests/api/: helpers.rs  main.rs
xtask/src/: db_config.rs
xtask/src/tasks/: ci.rs  coverage.rs  database.rs  distribute.rs  test.rs
