[package]
name = "ocieguide"
version = "0.1.0"
edition = "2021"

[features]
default = []
bunyan = ["dep:tracing-bunyan-formatter"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ocieguide"


[dependencies]
actix-web = "4"
anyhow = "1.0.75"
leptos = { version = "0.5.4", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.10.2"
tonic-build = "0.10.2"
tracing = { version = "0.1.40" }
tracing-bunyan-formatter = { version = "0.3.9", optional = true }
# TODO: Firgure out how not to import this when feature 'bunyan' active
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11.22", features = ["json"] }
