[package]
name = "ocieguide"
version = "0.1.0"
edition = "2021"

[features]
default = []
bunyan = ["dep:tracing-bunyan-formatter"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ocieguide"


[dependencies]
actix-web = "4"
anyhow = "1.0.81"
leptos = { version = "0.6.9", features = ["rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tracing = { version = "0.1.40" }
tracing-bunyan-formatter = { version = "0.3.9", optional = true }
# TODO: Firgure out how not to import this when feature 'bunyan' active
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11.26", features = ["json"] }
