[package]
name = "ocieguide"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ocieguide"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
http = "0.2.9"
hyper = "0.14.27"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", features = ["offline", "macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "request-id", "util"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
